fixed values algorithm. investigating screen top issue on ios devices

--- a/src/styles/sass/header2.scss
+++ b/src/styles/sass/header2.scss
@@ -3,14 +3,15 @@
 @media screen and (min-width:0px){
     
   #header2{
-      display: flex;
-      flex-direction: column;
+      @include box(flex, column, auto, auto);  
       width:100vw;
       position:fixed;
       transition: background-color .5s, height .5s;
       z-index:20;
       overflow:hidden;
       top:0;
+      padding-top:11px;
+      box-sizing: border-box;
       
       #header-items2{
         @include box(flex, row, space-between, center);
